api/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cliet-tableaux-api-cors
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "PUT"
      - "DELETE"
      - "OPTIONS"
      - "PATCH"
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList:
      - "https://www.cliet-tableaux.fr"
      - "https://cliet-tableaux.fr"
    accessControlMaxAge: 100
    addVaryHeader: true
    accessControlAllowCredentials: true
