api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cliet-tableaux-api
spec:
  selector:
    app: cliet-tableaux-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: http
  type: ClusterIP
