api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cliet-tableaux-api
  annotations:
    spec.ingressClassName: "traefik"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: api.cliet-tableaux.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cliet-tableaux-api
                port:
                  number: 8080
  tls:
    - hosts:
        - api.cliet-tableaux.fr
      secretName: api-cliet-tableaux-tls
